# csskit

./: .clippy.toml  .csswg-drafts-sha  .gitignore  .gitmodules  .mise.toml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
crates/chromashift/: CHANGELOG.md  Cargo.toml  README.md
crates/chromashift/src/: a98_rgb.rs  channels.rs  conversion.rs  display_p3.rs  distance.rs  gamut.rs  hex.rs  hsb.rs  hsl.rs  hwb.rs  lab.rs  lch.rs  lib.rs  linear_rgb.rs  mix.rs  named.rs  oklab.rs  oklch.rs  prophoto_rgb.rs  rec2020.rs  srgb.rs  tests.rs  wcag.rs  xyzd50.rs  xyzd65.rs
crates/css_ast/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/css_ast/benches/: parse_popular.rs
crates/css_ast/src/: constraints.rs  css_atom_set.rs  diagnostics.rs  lib.rs  metadata.rs  property_atoms.rs  specificity.rs  stylerule.rs  stylesheet.rs  test_helpers.rs  traits.rs
crates/css_ast/src/functions/: attr_function.rs  calc_size_function.rs  color_function.rs  content_function.rs  counter_functions.rs  dynamic_range_limit_mix_function.rs  easing_functions.rs  fit_content_function.rs  gradient_functions.rs  image_set_function.rs  keypress_function.rs  leader_function.rs  mod.rs  param_function.rs  repeat_function.rs  snap_block_function.rs  snap_inline_function.rs  string_function.rs  stripes_function.rs  superellipse_function.rs  symbols_function.rs  target_functions.rs  transform_functions.rs  url.rs
crates/css_ast/src/properties/: mod.rs
crates/css_ast/src/rules/: charset.rs  color_profile.rs  counter_style.rs  document.rs  font_face.rs  font_feature_values.rs  font_palette_values.rs  import.rs  keyframes.rs  layer.rs  mod.rs  moz.rs  namespace.rs  page.rs  property.rs  scope.rs  starting_style.rs  supports.rs  webkit.rs
crates/css_ast/src/selector/: attribute.rs  class.rs  combinator.rs  functional_pseudo_class.rs  functional_pseudo_element.rs  mod.rs  moz.rs  ms.rs  namespace.rs  nth.rs  o.rs  pseudo_class.rs  pseudo_element.rs  tag.rs  webkit.rs
crates/css_ast/src/traits/: declaration_metadata.rs
crates/css_ast/src/types/: absolute_size.rs  anchor_name.rs  animateable_feature.rs  animation_action.rs  attachment.rs  auto_line_color_list.rs  auto_line_style_list.rs  auto_line_width_list.rs  auto_or.rs  autonone_or.rs  autospace.rs  baseline_position.rs  basic_shape_rect.rs  bg_clip.rs  bg_image.rs  bg_size.rs  blend_mode.rs  border_radius.rs  compat_auto.rs  compat_special.rs  content_distribution.rs  content_list.rs  content_position.rs  coord_box.rs  corner_shape_value.rs  counter_style.rs  cursor_image.rs  cursor_predefined.rs  custom_ident.rs  dashed_ident.rs  display_box.rs  display_inside.rs  (+66 more)
crates/css_ast/tests/: allocations.rs  basic_snapshots.rs  helpers.rs  popular_snapshots.rs  postcss_snapshots.rs
crates/css_feature_data/: CHANGELOG.md  Cargo.toml  README.md
crates/css_feature_data/src/: baseline_status.rs  browser_support.rs  browser_version.rs  css_feature.rs  data.rs  lib.rs
crates/css_lexer/: CHANGELOG.md  Cargo.toml  README.md
crates/css_lexer/benches/: lex_popular.rs
crates/css_lexer/src/: associated_whitespace_rules.rs  atom_set.rs  comment_style.rs  cow.rs  cursor.rs  dimension_unit.rs  dyn_atom_registry.rs  empty_atom_set.rs  feature.rs  kindset.rs  lib.rs  pairwise.rs  private.rs  quote_style.rs  small_str_buf.rs  source_cursor.rs  span.rs  token.rs  whitespace_style.rs
crates/css_lexer/tests/: allocations.rs  basic_snapshots.rs  css-tokenizer-tests.rs  helpers.rs  popular_snapshots.rs  postcss_snapshots.rs  tests.rs
crates/css_parse/: CHANGELOG.md  Cargo.toml  README.md
crates/css_parse/src/: comparison.rs  cursor_compact_write_sink.rs  cursor_expanded_write_sink.rs  cursor_interleave_sink.rs  cursor_ordered_sink.rs  cursor_overlay_sink.rs  cursor_pretty_write_sink.rs  cursor_to_source_cursor_sink.rs  cursor_write_sink.rs  diagnostics.rs  feature.rs  lib.rs  parser.rs  parser_checkpoint.rs  parser_return.rs  test_helpers.rs  token_macros.rs
crates/css_parse/tests/: allocations.rs
crates/css_value_definition_parser/: CHANGELOG.md  Cargo.toml  README.md
crates/css_value_definition_parser/src/: lib.rs  test.rs
crates/csskit/: CHANGELOG.md  Cargo.toml  README.md
crates/csskit/src/: color_ext.rs  errors.rs  input.rs  main.rs
crates/csskit_ast/: Cargo.toml  build.rs
crates/csskit_ast/benches/: collector.rs  parse_sheet.rs  selector_matcher.rs
crates/csskit_ast/src/: csskit_atom_set.rs  diagnostics.rs  lib.rs  node_rule.rs  rule_block.rs  sheet.rs  stat_rule.rs  test_helpers.rs  when_rule.rs
crates/csskit_highlight/: CHANGELOG.md  Cargo.toml  README.md
crates/csskit_highlight/src/: ansi_highlight_cursor_stream.rs  css.rs  default_ansi_theme.rs  highlight.rs  lib.rs  test_helpers.rs
crates/csskit_lsp/: CHANGELOG.md  Cargo.toml  README.md
crates/csskit_lsp/src/: server.rs  service.rs
crates/csskit_proc_macro/: CHANGELOG.md  Cargo.toml  README.md  type_renames.toml
crates/csskit_proc_macro/src/: def.rs  generate.rs  lib.rs  syntax.rs  test.rs  type_renames.rs  value.rs
crates/csskit_source_finder/: CHANGELOG.md  Cargo.toml  README.md
crates/csskit_source_finder/src/: lib.rs
crates/csskit_spec_generator/: Cargo.toml  ignore_properties.toml  manual_parse_properties.toml  shorthands.toml  todo_properties.toml  value_extensions.toml
crates/csskit_spec_generator/src/: codegen.rs  excluded_specs.rs  fetch_cached.rs  ignore_properties.rs  main.rs  manual_parse_properties.rs  shorthands.rs  spec_parser.rs  todo_properties.rs  value_extensions.rs  web_features_data.rs
crates/csskit_transform/: CHANGELOG.md  Cargo.toml  README.md
crates/csskit_transform/benches/: minify_popular.rs
crates/csskit_transform/src/: css_minifier.rs  lib.rs  reduce_colors.rs  reduce_lengths.rs  reduce_time_units.rs  test_helpers.rs  transform.rs  transformer.rs
crates/csskit_wasm/: CHANGELOG.md  Cargo.toml
crates/csskit_wasm/src/: lib.rs
crates/derive_atom_set/: CHANGELOG.md  Cargo.toml  README.md
crates/derive_atom_set/benches/: atom_set_bench.rs
crates/derive_atom_set/src/: atom_set.rs  lib.rs
crates/derive_atom_set/tests/: test.rs
(+694 files in other folders)
