[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["packages/csskit_zed"]

[workspace.package]
authors = ["Keith Cirkel (https://keithcirkel.co.uk)"]
description = "Refreshing CSS!"
edition = "2024"
homepage = "https://hdx.rs"
keywords = ["CSS", "parser"]
license = "MIT"
repository = "https://github.com/csskit/csskit"
version = "0.0.4"

[workspace.dependencies]
# Local packages
# Versions are managed by cargo-release and inherit from workspace.package.version
csskit = { path = "crates/csskit" }
csskit_derives = { path = "crates/csskit_derives" }
csskit_proc_macro = { path = "crates/csskit_proc_macro" }
css_value_definition_parser = { path = "crates/css_value_definition_parser" }
css_parse = { path = "crates/css_parse" }
css_lexer = { path = "crates/css_lexer" }
css_ast = { path = "crates/css_ast" }
derive_atom_set = { path = "crates/derive_atom_set" }
css_feature_data = { path = "crates/css_feature_data" }
csskit_source_finder = { path = "crates/csskit_source_finder" }
csskit_transform = { path = "crates/csskit_transform" }
csskit_highlight = { path = "crates/csskit_highlight" }
csskit_lsp = { path = "crates/csskit_lsp" }
chromashift = { path = "crates/chromashift" }

# Memory
allocator-api2 = { version = "0.2.21" } # Held back for bumpalo (https://github.com/fitzgen/bumpalo/pull/288)
bumpalo = { version = "3.19.0" }

# Data structure libraries/helpers
bitmask-enum = { version = "2.2.5" }
itertools = { version = "0.14.0" }
ropey = { version = "1.6.1" }
smallvec = { version = "1.15.1" }
strum = { version = "0.27.2" }
phf = { version = "0.13.1" }

# CLI
clap = { version = "4.5.48" }
glob = { version = "0.3.3" }
project-root = { version = "0.2.2" }
anstyle = { version = "1.0.13" }

# LSP packages
lsp-types = { version = "0.97.0" }
httparse = { version = "1.10.1" }

# Multithreading
crossbeam-channel = { version = "0.5.15" }
dashmap = { version = "6.1.0" }

# Logging
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20" }
console = { version = "0.16.1" }

# Error handling
miette = { version = "7.6.0", default-features = false }
thiserror = { version = "2.0.17" }

# Procc Macro Tools
syn = { version = "2.0.106" }
quote = { version = "1.0.41" }
proc-macro2 = { version = "1.0.101" }
heck = { version = "0.5.0" }

# Serialization
serde = { version = "1.0.228" }
serde_json = { version = "1.0.145" }

# Testing, benchmarking
similar = { version = "2.7.0" }
criterion = { version = "0.5.1" }     # Held back for pprof (https://github.com/tikv/pprof-rs/pull/271)
pprof = { version = "0.15.0" }
flate2 = { version = "1.1.4" }
insta = { version = "1.43.2" }
prettyplease = { version = "0.2.37" }
dhat = { version = "0.3.3" }

# Build tools
grep-regex = { version = "0.1.13" }
grep-matcher = { version = "0.1.7" }
grep-searcher = { version = "0.1.14" }

# Wasm
wasm-bindgen = { version = "0.2.104" }
serde-wasm-bindgen = { version = "0.6.5" }
console_error_panic_hook = { version = "0.1.7" }

# CSS Feature Data packages
browserslist-rs = { version = "0.19" }
chrono = { version = "0.4.42" }

[workspace.metadata.workspaces]
allow_branch = "main"

[workspace.metadata.release]
# All crates share the same version from workspace.package.version
shared-version = true
# Update workspace dependencies automatically when releasing
dependent-version = "upgrade"
# Only release from main branch
allow-branch = ["main"]
# Tag format for releases
tag-name = "v{{version}}"
# Consolidate all version bumps into a single commit
consolidate-commits = true
# Push to origin
push-remote = "origin"

# Update CHANGELOG.md on release
pre-release-replacements = [
  # Replace Unreleased header with new version and date
  { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n### Added\n\n### Changed\n\n### Deprecated\n\n### Removed\n\n### Fixed\n\n### Security\n\n## [{{version}}] - {{date}}", exactly = 1 },
  # Update unreleased comparison link
  { file = "CHANGELOG.md", search = "\\[Unreleased\\]: https://github.com/csskit/csskit/compare/v.*...HEAD", replace = "[Unreleased]: https://github.com/csskit/csskit/compare/v{{version}}...HEAD", exactly = 1 },
  # Add new version comparison link
  { file = "CHANGELOG.md", search = "\\[Unreleased\\]: https://github.com/csskit/csskit/compare/v{{version}}...HEAD", replace = "[Unreleased]: https://github.com/csskit/csskit/compare/v{{version}}...HEAD\n[{{version}}]: https://github.com/csskit/csskit/releases/tag/v{{version}}", exactly = 1 },
]

[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"   # Let it crash and force ourselves to write safe Rust.

# Use the `--profile release-debug` flag to show symbols in release mode.
# e.g. `cargo build --profile release-debug`
[profile.release-debug]
inherits = "release"
strip = false
debug = true

# For faster compiles during development, opt-level some dynamic libraries
[profile.dev.package]
criterion.opt-level = 3
insta.opt-level = 3
similar.opt-level = 3
