[package]
name = "chromashift"
version.workspace = true
authors.workspace = true
description = "A library for converting between various color formats and color spaces."
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false

[dependencies]
anstyle = { workspace = true, optional = true }
owo-colors = { workspace = true, optional = true }

[features]
default = []
anstyle = ["dep:anstyle"]
owo-colors = ["dep:owo-colors"]
