[package]
name = "css_ast"
version.workspace = true
authors.workspace = true
description = "CSS Abstract Syntax Trees with visitable nodes and style value types."
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false

[dependencies]
css_parse = { workspace = true }                         # @release
css_lexer = { workspace = true }                         # @release
csskit_proc_macro = { workspace = true }                 # @release
csskit_derives = { workspace = true }                    # @release
derive_atom_set = { workspace = true }                   # @release
css_feature_data = { workspace = true, optional = true } # @release
chromashift = { workspace = true, optional = true }      # @release

bumpalo = { workspace = true, features = ["collections", "boxed"] }
miette = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
smallvec = { workspace = true }

serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

bitmask-enum = { workspace = true }

[build-dependencies]
csskit_source_finder = { workspace = true } # @release
heck = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
css_parse = { workspace = true, features = ["testing"] }
glob = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
insta = { workspace = true, features = ["ron"] }
similar = { workspace = true }
console = { workspace = true }
dhat = { workspace = true }

[target.'cfg(target_family = "unix")'.dev-dependencies]
pprof = { workspace = true, features = ["flamegraph", "criterion"] }

[features]
default = []
visitable = []
serde = ["dep:serde", "dep:serde_json", "css_parse/serde", "smallvec/serde"]
miette = ["css_parse/miette"]
fancy = ["miette", "miette/fancy-no-backtrace"]
css_feature_data = ["dep:css_feature_data"]
chromashift = ["dep:chromashift"]
# Enables dynamic atom interning via CssLexer's DynAtomRegistry
dynamic-atoms = ["css_lexer/dynamic-atoms"]
# Test only features
_dhat-heap-testing = []

[[bench]]
name = "parse_popular"
harness = false

[[bench]]
name = "atom_set_bench"
harness = false
