[package]
name = "css_feature_data"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false

[dependencies]
phf = { workspace = true, features = ["macros"] }
browserslist-rs = { workspace = true, optional = true }
chrono = { workspace = true }

[features]
default = []
browserslist = ["dep:browserslist-rs"]
