[package]
name = "css_parse"
version.workspace = true
authors.workspace = true
description = "A recursive-descent CSS parser with generic cursor sinks and rich diagnostics."
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
exclude = ["tests/*", "bench/*"]

[lib]
bench = false

[dependencies]
css_lexer = { workspace = true, features = ["bumpalo"] } # @release

bumpalo = { workspace = true }
smallvec = { workspace = true }

miette = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true, optional = true }
bitmask-enum = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
csskit_derives = { workspace = true }  # @release
derive_atom_set = { workspace = true } # @release
glob = { workspace = true }
dhat = { workspace = true }

[features]
default = []
testing = []
# Easter egg feature for CSS expansion (opposite of minification)
egg = ["css_lexer/egg"]
miette = ["dep:miette", "dep:thiserror", "css_lexer/miette"]
serde = ["dep:serde", "dep:serde_json", "css_lexer/serde", "bumpalo/serde"]
fancy = ["miette", "miette/fancy-no-backtrace"]
# Test only features
_dhat-heap-testing = []
