[package]
name = "css_value_definition_parser"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false

[dependencies]
css_lexer.workspace = true # @release

syn = { workspace = true, features = ["extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
itertools = { workspace = true }
heck = { workspace = true }

[dev-dependencies]
prettyplease = { workspace = true }
insta = { workspace = true, features = ["json"] }

[features]
default = []
