[package]
name = "csskit"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
css_lexer = { workspace = true } # @release
css_ast = { workspace = true, features = ["chromashift", "visitable"] } # @release
css_parse = { workspace = true } # @release
csskit_ast = { workspace = true } # @release
csskit_lsp = { workspace = true } # @release
csskit_highlight = { workspace = true, features = ["ansi"] } # @release
chromashift = { workspace = true, features = ["anstyle"] } # @release

itertools = { workspace = true }

clap = { workspace = true, features = ["derive", "cargo"] }
miette = { workspace = true }
anstyle = { workspace = true }
strsim = { workspace = true }

bumpalo = { workspace = true, features = ["collections", "boxed"] }

serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["fancy"]
serde = ["dep:serde", "dep:serde_json", "css_lexer/serde"]
miette = ["css_parse/miette", "css_ast/miette"]
fancy = ["miette", "miette/fancy"]

[[bin]]
name = "csskit"
path = "src/main.rs"
bench = false
