[package]
name = "csskit"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
css_lexer = { workspace = true } # @release
css_ast = { workspace = true, features = ["chromashift", "visitable", "miette"] } # @release
css_parse = { workspace = true, features = ["miette"] } # @release
csskit_ast = { workspace = true, features = ["miette"] } # @release
csskit_lsp = { workspace = true } # @release
csskit_highlight = { workspace = true, features = ["miette"] } # @release
csskit_transform = { workspace = true } # @release
chromashift = { workspace = true } # @release

itertools = { workspace = true }

clap = { workspace = true, features = ["derive", "cargo"] }
miette = { workspace = true }
anstyle = { workspace = true, optional = true }
owo-colors = { workspace = true, optional = true }
strsim = { workspace = true }

bumpalo = { workspace = true, features = ["collections", "boxed"] }

serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["fancy", "owo-colors"]
anstyle = ["dep:anstyle", "csskit_highlight/anstyle", "chromashift/anstyle"]
owo-colors = ["dep:owo-colors", "csskit_highlight/owo-colors", "chromashift/owo-colors"]
miette = ["css_parse/miette", "css_ast/miette"]
fancy = ["miette", "miette/fancy"]

[[bin]]
name = "csskit"
path = "src/main.rs"
bench = false
