[package]
name = "csskit_ast"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false

[dependencies]
bitmask-enum = { workspace = true }
css_lexer = { workspace = true } # @release
css_parse = { workspace = true } # @release
css_ast = { workspace = true, features = ["visitable"] } # @release
csskit_derives = { workspace = true } # @release
derive_atom_set = { workspace = true } # @release
bumpalo = { workspace = true, features = ["collections", "boxed"] }

[dev-dependencies]
css_parse = { workspace = true, features = ["testing"] } # @release

[features]
default = []
