[package]
name = "csskit_ast"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false

[dependencies]
bitmask-enum = { workspace = true }
css_lexer = { workspace = true, features = ["dynamic-atoms"] } # @release
css_parse = { workspace = true } # @release
css_ast = { workspace = true, features = ["visitable"] } # @release
csskit_derives = { workspace = true } # @release
derive_atom_set = { workspace = true } # @release
bumpalo = { workspace = true, features = ["collections", "boxed"] }
indexmap = { workspace = true }
smallvec = { workspace = true }
miette = { workspace = true, optional = true }

[dev-dependencies]
css_parse = { workspace = true, features = ["testing"] } # @release
glob = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }

[target.'cfg(target_family = "unix")'.dev-dependencies]
pprof = { workspace = true, features = ["flamegraph", "criterion"] }

[build-dependencies]
css_ast = { workspace = true, features = ["visitable"] } # @release

[features]
default = []
miette = ["dep:miette", "css_lexer/miette"]

[[bench]]
name = "parse_sheet"
harness = false

[[bench]]
name = "selector_matcher"
harness = false

[[bench]]
name = "collector"
harness = false
