[package]
name = "csskit_highlight"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false

[dependencies]
css_ast = { workspace = true, features = ["chromashift", "visitable"] }
css_lexer = { workspace = true }
css_parse = { workspace = true }
chromashift = { workspace = true }

bitmask-enum = { workspace = true }
strum = { workspace = true, features = ["derive"] }

anstyle = { workspace = true, optional = true }

[dev-dependencies]
css_parse = { workspace = true }
bumpalo = { workspace = true }
insta = { workspace = true, features = ["json"] }
similar = { workspace = true }
console = { workspace = true }

[features]
ansi = ["dep:anstyle"]
