[package]
name = "csskit_lsp"
version.workspace = true
authors.workspace = true
description = "A JSON-RPC Language Server Protocol implementation for CSS with semantic tokens and diagnostics."
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false

[dependencies]
css_parse = { workspace = true }                         # @release
css_ast = { workspace = true, features = ["visitable"] } # @release
css_lexer = { workspace = true }                         # @release
csskit_highlight = { workspace = true }                  # @release

bumpalo = { workspace = true, features = ["collections", "boxed"] }
miette = { workspace = true, features = ["derive"] }

bitmask-enum = { workspace = true }
itertools = { workspace = true }
ropey = { workspace = true }
smallvec = { workspace = true }
strum = { workspace = true, features = ["derive"] }

serde = { workspace = true }
serde_json = { workspace = true }

lsp-types = { workspace = true, features = ["proposed"] }
crossbeam-channel = { workspace = true }
httparse = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
glob = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
insta = { workspace = true, features = ["json"] }
similar = { workspace = true }
console = { workspace = true }

[target.'cfg(target_family = "unix")'.dev-dependencies]
pprof = { workspace = true, features = ["flamegraph", "criterion"] }

[features]
default = []
fancy = ["miette/fancy-no-backtrace"]
