[package]
name = "csskit_proc_macro"
version.workspace = true
authors.workspace = true
description = "Procedural macros for generating CSS parsers from grammar specifications."
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false
proc-macro = true

[dependencies]
css_lexer.workspace = true                   # @release
css_value_definition_parser.workspace = true # @release

syn = { workspace = true, features = ["extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
itertools = { workspace = true }
heck = { workspace = true }

[dev-dependencies]
prettyplease = { workspace = true }
insta = { workspace = true, features = ["json"] }

[features]
default = []
