[package]
name = "csskit_source_finder"
version.workspace = true
authors.workspace = true
description = "Source code location utilities for csskit"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false

[dependencies]
grep-regex = { workspace = true }
grep-searcher = { workspace = true }
grep-matcher = { workspace = true }
glob = { workspace = true }
heck = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
insta = { workspace = true, features = ["ron"] }
itertools = { workspace = true }
