[package]
name = "csskit_spec_generator"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "csskit_spec_generator"
path = "src/main.rs"
bench = false

[dependencies]
css_value_definition_parser = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
reqwest = { workspace = true, features = [
	"json",
	"gzip",
	"brotli",
	"deflate",
	"stream",
] }
anyhow = { workspace = true }
heck = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = "0.3"
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
regex = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
toml = { workspace = true }
