[package]
name = "csskit_transform"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false

[dependencies]
css_ast = { workspace = true, features = ["visitable"] } # @release

[dev-dependencies]
css_parse = { workspace = true } # @release
glob = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }

[target.'cfg(target_family = "unix")'.dev-dependencies]
pprof = { workspace = true, features = ["flamegraph", "criterion"] }

bumpalo = { workspace = true }

[features]
default = []

[[bench]]
name = "minify_popular"
harness = false
