[package]
name = "derive_atom_set"
version = "0.0.1"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false
proc-macro = true

[[bench]]
name = "atom_set_bench"
harness = false

[dependencies]
syn = { workspace = true, features = ["extra-traits", "parsing"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
itertools = { workspace = true }
heck = { workspace = true }

[dev-dependencies]
prettyplease = { workspace = true }
insta = { workspace = true, features = ["json"] }
criterion = { workspace = true, features = ["html_reports"] }
css_ast = { workspace = true }

[features]
default = []

